<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/volleyball" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_a"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_a_score"
                android:textAlignment="center"
                android:textColor="#4D4848"
                android:textSize="120sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/sets_a"
                android:textColor="#4D4848"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sets_a_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/sets_team_a"
                android:textColor="#4D4848"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@android:color/black">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/team_b_score"
                android:textAlignment="center"
                android:textColor="#4D4848"
                android:textSize="120sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/sets_b"
                android:textColor="#4D4848"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sets_b_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/sets_team_b"
                android:textColor="#4D4848"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-light"
        android:onClick="addOneForTeamA"
        android:text="@string/point_for_team_a"
        android:textSize="15sp"
        android:textStyle="bold" android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-light"
        android:onClick="addOneForTeamB"
        android:text="@string/point_for_team_b"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset"
        android:layout_centerInParent="true"
        android:src="@drawable/logo" />

</RelativeLayout>

